# peyote

./: .cookiecutter.json  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE.txt  README.md  mkdocs.yml  peyotesh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yaml
.github/ISSUE_TEMPLATE/: 1_bug_report.yaml  3_question.yaml  config.yaml
.github/workflows/: README.md  docs.yml  release.yaml
docs/: changelog.md  contributing.md  gen_ref_pages.py  index.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/user-guide/: cli.md  examples.md
examples/: julia.py  sandStrokem.py  substrate.py
examples/ide_examples/: README.md
examples/ide_examples/basic_sketch/: main.py
peyote/graphics/: Context.py  __init__.py
peyote/util/: __init__.py
plans/: PLANS_TEMPLATE.md  hextrail-port.md  processing_ide_implementation.md  processing_ide_plan.md  pyside_smoke.md
src/peyote/: __init__.py  __main__.py  ide_subcommand.py  self_subcommand.py  settings.py  smoke_subcommand.py
src/peyote/graphics/: Canvas.py  Context.py  __init__.py
src/peyote/ide/: README.md  __init__.py  app_dirs.py  code_editor.py  display_widget.py  execution_engine.py  ide_window.py  logging_setup.py  module_loader.py  package_manager.py  styles.py  syntax_highlighter.py  tab_manager.py
src/peyote/util/: __init__.py  interp.py
tests/: __init__.py  conftest.py  test_cli.py  test_smoke.py
